--- a/index.html
+++ b/index.html
@@ -2,65 +2,93 @@
 layout: default
 ---
 
-<div class="home">
+<div class="home mdl-grid">
 
   <div id="container">
-    <div class="item">
-      <img src="https://images1-focus-opensocial.googleusercontent.com/gadgets/proxy?url=http%3A%2F%2Fa1.dspncdn.com%2Fmedia%2F692x%2F77%2F20%2F0a%2F77200a6faa8917082f7c9c7b82689bd8.jpg&amp;container=focus&amp;refresh=3600&amp;resize_w=400">
+
+    <div class="mdl-cell mdl-cell--4-col">
+      <a href="#">
+        <img src="/images/1.jpg">
+      </a>
     </div>
 
-    <div class="item">
-      <img src="https://images1-focus-opensocial.googleusercontent.com/gadgets/proxy?url=https%3A%2F%2F40.media.tumblr.com%2F7fb2ac893fb649e856ca138d4ead9cd8%2Ftumblr_o10784ZBdO1u16n75o1_1280.jpg&container=focus&refresh=3600&resize_w=400">
+    <div class="mdl-cell mdl-cell--7-col">
+      <a href="#">
+        <img src="/images/2.jpg">
+      </a>
     </div>
 
-    <div class="item w2">
-      <img src="https://49.media.tumblr.com/ec98f6a2e2dcd42027f9b78f520d55f0/tumblr_o1283y1sPA1u3bn17o1_540.gif">
+    <div class="mdl-cell mdl-cell--3-col">
+      <a href="#">
+        <img src="/images/3.jpg">
+      </a>
     </div>
 
-    <div class="item">
-      <img src="https://images1-focus-opensocial.googleusercontent.com/gadgets/proxy?url=https%3A%2F%2F40.media.tumblr.com%2Feb7d92217b380048148c25a29101a22e%2Ftumblr_o0qsp2BgIW1skr4hwo1_1280.jpg&container=focus&refresh=3600&resize_w=400">
+    <div class="mdl-cell mdl-cell--2-col">
+      <a href="#">
+        <img src="/images/4.jpg">
+      </a>
     </div>
 
-    <div class="item">
-      <img src="https://45.media.tumblr.com/b936dcfd562c0ee10f1a7e4d911ba436/tumblr_n1h1jop38I1r5vojso6_1280.gif">
+    <div class="mdl-cell mdl-cell--6-col">
+      <a href="#">
+        <img src="/images/5.jpg">
+      </a>
     </div>
 
-    <div class="item w2">
-      <img src="https://images1-focus-opensocial.googleusercontent.com/gadgets/proxy?url=https%3A%2F%2F36.media.tumblr.com%2F83154698ede5793783a12d72ae9d1b28%2Ftumblr_o066zvbIVC1t1uapvo1_r2_1280.jpg&container=focus&refresh=3600&resize_w=400">
+    <div class="mdl-cell mdl-cell--4-col">
+      <a href="#">
+        <img src="/images/6.jpg">
+      </a>
     </div>
 
-    <div class="item w2">
-      <img src="https://49.media.tumblr.com/ec98f6a2e2dcd42027f9b78f520d55f0/tumblr_o1283y1sPA1u3bn17o1_540.gif">
+    <div class="mdl-cell mdl-cell--4-col">
+      <a href="#">
+        <img src="/images/7.jpg">
+      </a>
     </div>
 
-    <div class="item">
-      <img src="https://images1-focus-opensocial.googleusercontent.com/gadgets/proxy?url=http%3A%2F%2Fa1.dspncdn.com%2Fmedia%2F692x%2F77%2F20%2F0a%2F77200a6faa8917082f7c9c7b82689bd8.jpg&amp;container=focus&amp;refresh=3600&amp;resize_w=400">
+    <div class="mdl-cell mdl-cell--5-col">
+      <a href="#">
+        <img src="/images/8.jpg">
+      </a>
     </div>
 
-    <div class="item">
-      <img src="https://images1-focus-opensocial.googleusercontent.com/gadgets/proxy?url=https%3A%2F%2F40.media.tumblr.com%2F7fb2ac893fb649e856ca138d4ead9cd8%2Ftumblr_o10784ZBdO1u16n75o1_1280.jpg&container=focus&refresh=3600&resize_w=400">
+    <div class="mdl-cell mdl-cell--8-col">
+      <a href="#">
+        <img src="/images/9.jpg">
+      </a>
     </div>
 
-    <div class="item">
-      <img src="https://images1-focus-opensocial.googleusercontent.com/gadgets/proxy?url=https%3A%2F%2F40.media.tumblr.com%2Feb7d92217b380048148c25a29101a22e%2Ftumblr_o0qsp2BgIW1skr4hwo1_1280.jpg&container=focus&refresh=3600&resize_w=400">
+    <div class="mdl-cell mdl-cell--4-col">
+      <a href="#">
+        <img src="/images/10.jpg">
+      </a>
     </div>
 
-    <div class="item">
-      <img src="https://images1-focus-opensocial.googleusercontent.com/gadgets/proxy?url=https%3A%2F%2F40.media.tumblr.com%2F7fb2ac893fb649e856ca138d4ead9cd8%2Ftumblr_o10784ZBdO1u16n75o1_1280.jpg&container=focus&refresh=3600&resize_w=400">
+    <div class="mdl-cell mdl-cell--4-col">
+      <a href="#">
+        <img src="/images/11.jpg">
+      </a>
     </div>
 
-    <div class="item w2">
-      <img src="https://49.media.tumblr.com/02c54f90f68c96803b4d8b66ec3c464b/tumblr_o1062unIYW1r20fq5o1_500.gif">
+    <div class="mdl-cell mdl-cell--7-col">
+      <a href="#">
+        <img src="/images/1.jpg">
+      </a>
     </div>
 
-    <div class="item">
-      <img src="https://images1-focus-opensocial.googleusercontent.com/gadgets/proxy?url=https%3A%2F%2F40.media.tumblr.com%2F7fb2ac893fb649e856ca138d4ead9cd8%2Ftumblr_o10784ZBdO1u16n75o1_1280.jpg&container=focus&refresh=3600&resize_w=400">
+    <div class="mdl-cell mdl-cell--1-col">
+      <a href="#">
+        <img src="/images/2.jpg">
+      </a>
     </div>
 
-    <div class="item w2">
-      <img src="https://images1-focus-opensocial.googleusercontent.com/gadgets/proxy?url=https%3A%2F%2F36.media.tumblr.com%2F83154698ede5793783a12d72ae9d1b28%2Ftumblr_o066zvbIVC1t1uapvo1_r2_1280.jpg&container=focus&refresh=3600&resize_w=400">
+    <div class="mdl-cell mdl-cell--10-col">
+      <a href="#">
+        <img src="/images/3.jpg">
+      </a>
     </div>
-
 
   </div>
 
