--- a/index.html
+++ b/index.html
@@ -2,94 +2,90 @@
 layout: default
 ---
 
-<div class="home mdl-grid">
+<div id="container" class="home mdl-grid">
 
-  <div id="container">
+  <div class="mdl-cell mdl-cell--4-col">
+    <a href="#">
+      <img src="/images/1.jpg">
+    </a>
+  </div>
 
-    <div class="mdl-cell mdl-cell--4-col">
-      <a href="#">
-        <img src="/images/1.jpg">
-      </a>
-    </div>
+  <div class="mdl-cell mdl-cell--7-col">
+    <a href="#">
+      <img src="/images/2.jpg">
+    </a>
+  </div>
 
-    <div class="mdl-cell mdl-cell--7-col">
-      <a href="#">
-        <img src="/images/2.jpg">
-      </a>
-    </div>
+  <div class="mdl-cell mdl-cell--3-col">
+    <a href="#">
+      <img src="/images/3.jpg">
+    </a>
+  </div>
 
-    <div class="mdl-cell mdl-cell--3-col">
-      <a href="#">
-        <img src="/images/3.jpg">
-      </a>
-    </div>
+  <div class="mdl-cell mdl-cell--2-col">
+    <a href="#">
+      <img src="/images/4.jpg">
+    </a>
+  </div>
 
-    <div class="mdl-cell mdl-cell--2-col">
-      <a href="#">
-        <img src="/images/4.jpg">
-      </a>
-    </div>
+  <div class="mdl-cell mdl-cell--6-col">
+    <a href="#">
+      <img src="/images/5.jpg">
+    </a>
+  </div>
 
-    <div class="mdl-cell mdl-cell--6-col">
-      <a href="#">
-        <img src="/images/5.jpg">
-      </a>
-    </div>
+  <div class="mdl-cell mdl-cell--4-col">
+    <a href="#">
+      <img src="/images/6.jpg">
+    </a>
+  </div>
 
-    <div class="mdl-cell mdl-cell--4-col">
-      <a href="#">
-        <img src="/images/6.jpg">
-      </a>
-    </div>
+  <div class="mdl-cell mdl-cell--4-col">
+    <a href="#">
+      <img src="/images/7.jpg">
+    </a>
+  </div>
 
-    <div class="mdl-cell mdl-cell--4-col">
-      <a href="#">
-        <img src="/images/7.jpg">
-      </a>
-    </div>
+  <div class="mdl-cell mdl-cell--5-col">
+    <a href="#">
+      <img src="/images/8.jpg">
+    </a>
+  </div>
 
-    <div class="mdl-cell mdl-cell--5-col">
-      <a href="#">
-        <img src="/images/8.jpg">
-      </a>
-    </div>
+  <div class="mdl-cell mdl-cell--8-col">
+    <a href="#">
+      <img src="/images/9.jpg">
+    </a>
+  </div>
 
-    <div class="mdl-cell mdl-cell--8-col">
-      <a href="#">
-        <img src="/images/9.jpg">
-      </a>
-    </div>
+  <div class="mdl-cell mdl-cell--4-col">
+    <a href="#">
+      <img src="/images/10.jpg">
+    </a>
+  </div>
 
-    <div class="mdl-cell mdl-cell--4-col">
-      <a href="#">
-        <img src="/images/10.jpg">
-      </a>
-    </div>
+  <div class="mdl-cell mdl-cell--4-col">
+    <a href="#">
+      <img src="/images/11.jpg">
+    </a>
+  </div>
 
-    <div class="mdl-cell mdl-cell--4-col">
-      <a href="#">
-        <img src="/images/11.jpg">
-      </a>
-    </div>
+  <div class="mdl-cell mdl-cell--7-col">
+    <a href="#">
+      <img src="/images/1.jpg">
+    </a>
+  </div>
 
-    <div class="mdl-cell mdl-cell--7-col">
-      <a href="#">
-        <img src="/images/1.jpg">
-      </a>
-    </div>
+  <div class="mdl-cell mdl-cell--1-col">
+    <a href="#">
+      <img src="/images/2.jpg">
+    </a>
+  </div>
 
-    <div class="mdl-cell mdl-cell--1-col">
-      <a href="#">
-        <img src="/images/2.jpg">
-      </a>
-    </div>
-
-    <div class="mdl-cell mdl-cell--10-col">
-      <a href="#">
-        <img src="/images/3.jpg">
-      </a>
-    </div>
-
+  <div class="mdl-cell mdl-cell--10-col">
+    <a href="#">
+      <img src="/images/3.jpg">
+    </a>
   </div>
 
 </div>
